# actix-boilerplate

./: Cargo.toml  README.md  config.toml
src/: main.rs
src/app/: route.rs
src/app/api/: healthcheck.rs  mod.rs
src/app/db/: mod.rs
